@@ -113,6 +113,11 @@ then
         # a configure check.
         test -n "@TEX@" || exit 77
 	;;
+      texi2dvi-o)
+        # Texi2dvi supports `-o' since Texinfo 4.1.
+	echo "$me: running texi2dvi -o /dev/null --version"
+	( texi2dvi -o /dev/null --version ) || exit 77
+	;;
       # Generic case: the tool must support --version.
       *)
 	echo "$me: running $tool --version"
